--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 188px;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
